# PPC

./: pyproject.toml
data/: simulation.csv  simulation_deviation.csv  tabela_phi.csv
src/: 1-phi.ipynb  2-generate_data.ipynb  4-compare.ipynb  estimate.m
