[project]
name = "PPC"
version = "0.1.0"
requires-python = "==3.13.9"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]

[tool.ruff.lint]
extend-select = ["I", "NPY", "FLY", "UP"]
ignore = ["E741"]
